--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ dependencies:
   - blas=1.0
   - ca-certificates=2019.1.23
   - certifi=2019.3.9
-  - cffi=1.12.1
+  - cffi=1.12.2
   - cycler=0.10.0
   - dbus=1.13.6
   - expat=2.2.6
@@ -16,7 +16,7 @@ dependencies:
   - gst-plugins-base=1.14.0
   - gstreamer=1.14.0
   - icu=58.2
-  - intel-openmp=2019.1
+  - intel-openmp=2019.3
   - jpeg=9b
   - kiwisolver=1.0.1
   - libedit=3.1.20181209
@@ -31,17 +31,17 @@ dependencies:
   - libuuid=1.0.3
   - libxcb=1.13
   - libxml2=2.9.9
-  - matplotlib=3.0.2
-  - mkl=2019.1
+  - matplotlib=3.0.3
+  - mkl=2019.3
   - mkl_fft=1.0.10
   - mkl_random=1.0.2
   - ncurses=6.1
-  - ninja=1.8.2
+  - ninja=1.9.0
   - numpy=1.16.2
   - numpy-base=1.16.2
   - olefile=0.46
   - openssl=1.1.1b
-  - pcre=8.42
+  - pcre=8.43
   - pillow=5.4.1
   - pip=19.0.3
   - protobuf=3.6.1
@@ -50,31 +50,29 @@ dependencies:
   - pyqt=5.9.2
   - python=3.7.2
   - python-dateutil=2.8.0
+  - pytorch-cpu=1.0.1
   - pytz=2018.9
-  - pyzmq=18.0.0
   - qt=5.9.7
   - readline=7.0
   - setuptools=40.8.0
   - sip=4.19.8
   - six=1.12.0
-  - sqlite=3.26.0
+  - sqlite=3.27.2
   - tk=8.6.8
-  - tornado=5.1.1
+  - torchvision-cpu=0.2.2
+  - tornado=6.0.2
   - wheel=0.33.1
   - xz=5.2.4
   - zeromq=4.3.1
   - zlib=1.2.11
   - zstd=1.3.7
-  - pytorch-cpu=1.0.1
-  - torchvision-cpu=0.2.2
   - pip:
     - chardet==3.0.4
     - idna==2.8
+    - pyzmq==18.0.1
     - requests==2.21.0
     - scipy==1.2.1
-    - torch==1.0.1.post2
     - torchfile==0.1.0
-    - torchvision==0.2.2
     - urllib3==1.24.1
     - visdom==0.1.8.8
     - websocket-client==0.55.0
