--- a/environment.yml
+++ b/environment.yml
@@ -8,34 +8,34 @@ dependencies:
   - certifi=2019.3.9
   - cffi=1.12.2
   - cycler=0.10.0
-  - dbus=1.13.6
-  - expat=2.2.6
-  - fontconfig=2.13.0
+  - dbus
+  - expat
+  - fontconfig
   - freetype=2.9.1
-  - glib=2.56.2
-  - gst-plugins-base=1.14.0
-  - gstreamer=1.14.0
+  - glib
+  - gst-plugins-base
+  - gstreamer
   - icu=58.2
   - intel-openmp=2019.3
   - jpeg=9b
   - kiwisolver=1.0.1
-  - libedit=3.1.20181209
-  - libffi=3.2.1
-  - libgcc-ng=8.2.0
-  - libgfortran-ng=7.3.0
+  - libedit
+  - libffi
+  - libgcc-ng
+  - libgfortran-ng
   - libpng=1.6.36
   - libprotobuf=3.6.1
   - libsodium=1.0.16
-  - libstdcxx-ng=8.2.0
+  - libstdcxx-ng
   - libtiff=4.0.10
-  - libuuid=1.0.3
-  - libxcb=1.13
+  - libuuid
+  - libxcb
   - libxml2=2.9.9
   - matplotlib=3.0.3
   - mkl=2019.3
   - mkl_fft=1.0.10
   - mkl_random=1.0.2
-  - ncurses=6.1
+  - ncurses
   - ninja=1.9.0
   - numpy=1.16.2
   - numpy-base=1.16.2
@@ -53,7 +53,7 @@ dependencies:
   - pytorch-cpu=1.0.1
   - pytz=2018.9
   - qt=5.9.7
-  - readline=7.0
+  - readline
   - setuptools=40.8.0
   - sip=4.19.8
   - six=1.12.0
