--- a/environment.yml
+++ b/environment.yml
@@ -1,80 +1,10 @@
 name: bham_brigade_py
-channels:
-  - pytorch
-  - defaults
-dependencies:
-  - blas=1.0
-  - ca-certificates=2019.1.23
-  - certifi=2019.3.9
-  - cffi=1.12.2
-  - cycler=0.10.0
-  - dbus
-  - expat
-  - fontconfig
-  - freetype=2.9.1
-  - glib
-  - gst-plugins-base
-  - gstreamer
-  - icu=58.2
-  - intel-openmp=2019.3
-  - jpeg=9b
-  - kiwisolver=1.0.1
-  - libedit
-  - libffi
-  - libgcc-ng
-  - libgfortran-ng
-  - libpng=1.6.36
-  - libprotobuf=3.6.1
-  - libsodium=1.0.16
-  - libstdcxx-ng
-  - libtiff=4.0.10
-  - libuuid
-  - libxcb
-  - libxml2=2.9.9
-  - matplotlib=3.0.3
-  - mkl=2019.3
-  - mkl_fft=1.0.10
-  - mkl_random=1.0.2
-  - ncurses
-  - ninja=1.9.0
-  - numpy=1.16.2
-  - numpy-base=1.16.2
-  - olefile=0.46
-  - openssl=1.1.1b
-  - pcre=8.43
-  - pillow=5.4.1
-  - pip=19.0.3
-  - protobuf=3.6.1
-  - pycparser=2.19
-  - pyparsing=2.3.1
-  - pyqt=5.9.2
-  - python=3.7.2
-  - python-dateutil=2.8.0
-  - pytorch-cpu=1.0.1
-  - pytz=2018.9
-  - qt=5.9.7
-  - readline
-  - setuptools=40.8.0
-  - sip=4.19.8
-  - six=1.12.0
-  - sqlite=3.27.2
-  - tk=8.6.8
-  - torchvision-cpu=0.2.2
-  - tornado=6.0.2
-  - wheel=0.33.1
-  - xz=5.2.4
-  - zeromq=4.3.1
-  - zlib=1.2.11
-  - zstd=1.3.7
-  - pip:
-    - chardet==3.0.4
-    - idna==2.8
-    - pyzmq==18.0.1
-    - requests==2.21.0
-    - scipy==1.2.1
-    - torchfile==0.1.0
-    - urllib3==1.24.1
-    - visdom==0.1.8.8
-    - websocket-client==0.55.0
-prefix: /home/edoardo/miniconda3/envs/bham_brigade_py
 
+dependencies:
+ - shapely
+ - scikit-learn
+ - numpy
+ - protobuf
+ - pip:
+    - pyzmq==18.0.1
+    - visdom==0.1.8.8
